--- a/bootstrap/card.html
+++ b/bootstrap/card.html
@@ -10,16 +10,57 @@
 </head>
 
 <body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30"
+                        height="24">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="slider.html">Slides</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="card.html">Card</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown link
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="card" style="width: 18rem;">
         <img src="images/sang.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Showoff</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-            <a href="#" class="btn btn-primary">Visit Mohipur</a>
+            <a href="https://www.google.com/" class="btn btn-primary btn-outline-info">Visit Google</a>
         </div>
     </div>
-    <div class="card mb-3" style="">
+    <div class="card mb-3">
         <div class="row g-0">
             <div class="col-md-6">
                 <img src="images/buring.jpg" class="img-fluid rounded-start" alt="...">
