--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Sliders</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-
-</head>
+    <title>Explore Bootstrap</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 
 <body>
 
@@ -52,37 +50,29 @@
             </div>
         </nav>
     </header>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="images/buring.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/sang.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/komor1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/komor.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="images/mukh.jpg" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-        <h3>My Awesome slider Here</h3>
-    </div>
-    <script src="bootstrap.min.js"></script>
+    <h1 class="bg-success">Explore Bootstrap</h1>
+    <h2 class="bg-danger">I am a Danger Boy</h2>
+    <h3 class="bg-warning">Do not cross this road</h3>
+    <h4 class="bg-info">Information for secret agent</h4>
+    <h1>Color</h1>
+    <h2 class="text-primary">This is primary school</h2>
+    <h4 class="text-success mx-5 my-3">Wow I can Explore Bootstrap</h4>
+    <h5 class="text-white bg-success">Amaar sonar bangla</h5>
+    <h2 class="text-dark bg-info">Ami tomay valobasi</h2>
+    <br>
+
+    <h2>Borders</h2>
+    <div class="border border-success">My div</div>
+    <br>
+    <p>Hello: <button class="rounded bg-success border-success">Click Me</button> :Right</p>
+    <br>
+    <p>Hello: <span class="bg-danger rounded-pill text-white px-3 py-2">My Text</span></p>
+
+    <h2 class="text-danger border-bottom border-5 border-danger">Danger man</h2>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
